[tool.poetry]
name = "financetoolkit-tutorial"
version = "0.1.0"
description = ""
authors = ["axect <ax2ct@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
financetoolkit = "^1.3.9"
scienceplots = "^2.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
